api/cudf/22.12/_sources/api_docs/api/cudf.DataFrame.rst.txt
cudf.DataFrame
==============

.. currentmodule:: cudf

.. autoclass:: DataFrame

   


..
   HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
   .. autosummary::
      :toctree:
      
      DataFrame.abs
      DataFrame.add
      DataFrame.add_prefix
      DataFrame.add_suffix
      DataFrame.agg
      DataFrame.all
      DataFrame.any
      DataFrame.append
      DataFrame.apply
      DataFrame.apply_chunks
      DataFrame.apply_rows
      DataFrame.applymap
      DataFrame.argsort
      DataFrame.assign
      DataFrame.astype
      DataFrame.backfill
      DataFrame.bfill
      DataFrame.clip
      DataFrame.copy
      DataFrame.corr
      DataFrame.count
      DataFrame.cov
      DataFrame.cummax
      DataFrame.cummin
      DataFrame.cumprod
      DataFrame.cumsum
      DataFrame.describe
      DataFrame.deserialize
      DataFrame.device_deserialize
      DataFrame.device_serialize
      DataFrame.diff
      DataFrame.div
      DataFrame.divide
      DataFrame.dot
      DataFrame.drop
      DataFrame.drop_duplicates
      DataFrame.dropna
      DataFrame.eq
      DataFrame.equals
      DataFrame.eval
      DataFrame.explode
      DataFrame.ffill
      DataFrame.fillna
      DataFrame.first
      DataFrame.floordiv
      DataFrame.from_arrow
      DataFrame.from_dict
      DataFrame.from_pandas
      DataFrame.from_records
      DataFrame.ge
      DataFrame.groupby
      DataFrame.gt
      DataFrame.hash_values
      DataFrame.head
      DataFrame.host_deserialize
      DataFrame.host_serialize
      DataFrame.info
      DataFrame.insert
      DataFrame.interleave_columns
      DataFrame.interpolate
      DataFrame.isin
      DataFrame.isna
      DataFrame.isnull
      DataFrame.items
      DataFrame.iterrows
      DataFrame.itertuples
      DataFrame.join
      DataFrame.keys
      DataFrame.kurt
      DataFrame.kurtosis
      DataFrame.last
      DataFrame.le
      DataFrame.lt
      DataFrame.mask
      DataFrame.max
      DataFrame.mean
      DataFrame.median
      DataFrame.melt
      DataFrame.memory_usage
      DataFrame.merge
      DataFrame.min
      DataFrame.mod
      DataFrame.mode
      DataFrame.mul
      DataFrame.multiply
      DataFrame.nans_to_nulls
      DataFrame.ne
      DataFrame.nlargest
      DataFrame.notna
      DataFrame.notnull
      DataFrame.nsmallest
      DataFrame.nunique
      DataFrame.pad
      DataFrame.partition_by_hash
      DataFrame.pct_change
      DataFrame.pipe
      DataFrame.pivot
      DataFrame.pivot_table
      DataFrame.pop
      DataFrame.pow
      DataFrame.prod
      DataFrame.product
      DataFrame.quantile
      DataFrame.quantiles
      DataFrame.query
      DataFrame.radd
      DataFrame.rank
      DataFrame.rdiv
      DataFrame.reindex
      DataFrame.rename
      DataFrame.repeat
      DataFrame.replace
      DataFrame.resample
      DataFrame.reset_index
      DataFrame.rfloordiv
      DataFrame.rmod
      DataFrame.rmul
      DataFrame.rolling
      DataFrame.round
      DataFrame.rpow
      DataFrame.rsub
      DataFrame.rtruediv
      DataFrame.sample
      DataFrame.scale
      DataFrame.scatter_by_map
      DataFrame.searchsorted
      DataFrame.select_dtypes
      DataFrame.serialize
      DataFrame.set_index
      DataFrame.shift
      DataFrame.skew
      DataFrame.sort_index
      DataFrame.sort_values
      DataFrame.stack
      DataFrame.std
      DataFrame.sub
      DataFrame.subtract
      DataFrame.sum
      DataFrame.sum_of_squares
      DataFrame.swaplevel
      DataFrame.tail
      DataFrame.take
      DataFrame.tile
      DataFrame.to_arrow
      DataFrame.to_csv
      DataFrame.to_cupy
      DataFrame.to_dict
      DataFrame.to_dlpack
      DataFrame.to_feather
      DataFrame.to_hdf
      DataFrame.to_json
      DataFrame.to_numpy
      DataFrame.to_orc
      DataFrame.to_pandas
      DataFrame.to_parquet
      DataFrame.to_records
      DataFrame.to_string
      DataFrame.to_struct
      DataFrame.transpose
      DataFrame.truediv
      DataFrame.truncate
      DataFrame.unstack
      DataFrame.update
      DataFrame.value_counts
      DataFrame.var
      DataFrame.where




   


..
   HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
   .. autosummary::
      :toctree:
      
      DataFrame.T
      DataFrame.at
      DataFrame.axes
      DataFrame.columns
      DataFrame.dtypes
      DataFrame.empty
      DataFrame.iat
      DataFrame.iloc
      DataFrame.index
      DataFrame.loc
      DataFrame.ndim
      DataFrame.shape
      DataFrame.size
      DataFrame.values
      DataFrame.values_host


